# jira-activity-summary

./: .env.example  .gitignore  README.md  pyproject.toml
src/jira_activity_summary/: __init__.py  cli.py  config.py  content.py  jira_client.py  report.py  summary.py
tests/: __init__.py  test_config.py  test_content.py  test_report.py  test_summary.py
